Added basic authentication
