# WebModuleTeko/Models/AuthenticatedUserModel.cs
@@ -1,9 +1,10 @@
 ﻿namespace WebModuleTeko.Models;
 
-public class UserModel
+public class AuthenticatedUserModel
 {
 
     public string Email { get; set; } = null!;
     public string Username { get; set; } = null!;
+    public string Token { get; set; } = null!;
 
 }
